--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 
 
         <!-- hlavička -->
-
+        <div class="hlavicka">
         <h1 class="titulek">Island</h1>
 
         <p class="perex">Když se řekne Island, spoustě lidem se jako první vybaví sníh a led. Sama jsem tam strávila téměř rok života a zem pokrytou sněhem a ledem jsem zažila jen jediný den. Jednou věcí si ale jistá jsem: že návštěva ostrova pod polárním kruhem je pro každého tak silným zážitkem, že se sem bude chtít vrátit.</p>
 
         <p class="autor">Jana Zcela Vymyšlená</p>
+        </div>
 
 
 
@@ -49,7 +50,7 @@
 
         <!-- sekce Proč -->
 
-        <h2>Proč jet na Island</h2>
+        <h2 class="nadpis">Proč jet na Island</h2>
 
         <p>Island je domovem největšího evropského ledovce, vodopádu s nejmohutnějším průtokem a tisíců místních koní a divokých hus, které majestátně ve dvojicích křižují nebe a dokreslují tak neopakovatelnou atmosféru tohoto pozoruhodného kousku pevniny kdesi v Atlantiku. K tomu mohutné skalní útvary, čnící z moře jako tiší strážci místních černých lávových pláží, stovky metrů vysoké útesy, které jsou domovem racků a papuchalků a především obrovské vodopády všeho druhu. Panují tu trochu jiná měřítka, a to téměř ve všem.</p>
 
@@ -66,7 +67,7 @@
 
         <!-- sekce Co musíte vidět -->
 
-        <h2>Co musíte vidět</h2>
+        <h2 class="nadpis">Co musíte vidět</h2>
 
         <p><strong>Poloostrov Reykjanes</strong> - Než z letiště v Keflavíku zamíříte do hlavního města, zajeďte se podívat na tento poloostrov. Je to zajížďka jen pár kilometrů a rázem se dostanete do krajiny pro Island přímo typické. Cestu lemují lávová pole připomínající doslova měsíční krajinu. Pro Středoevropana něco neuvěřitelného. Ani kousek zeleně, kam oko dohlédne jen černá suť a rozpraskané lávové desky. Mezi tím vším až mysteriózně vypadající geotermální elektrárny. Na pobřeží pak vystupují z vody poutavé skalní útvary Reykjanesta.</p>
 
@@ -94,7 +95,7 @@
 
         <!-- sekce Fotogalerie -->
 
-		<h2>Fotogalerie</h2>
+		<h2 class="nadpis">Fotogalerie</h2>
 
         <div class="galerie">
 
@@ -175,7 +176,7 @@
 
 
         <!-- patička -->
-
+    <div class="paticka">
         <p>
             Texty převzaty z článků:<br>
             Roman Pech - <a href="http://cestovani.idnes.cz/island-a-roman-pech-0nh-/kolem-sveta.aspx?c=A140519_125122_kolem-sveta_tom">Závislost jménem Island. Tipy znalce, jak zemi levně procestovat</a><br>
@@ -185,6 +186,6 @@
             Úvodní fotografie &copy; <a href="https://flic.kr/p/gett4S">Moyan Brenn</a>
         </p>
 
-
+    </div>
     </body>
 </html>
