--- a/index.html
+++ b/index.html
@@ -26,15 +26,18 @@
 
         <ul class="menu">
             <li><a href="#">Úvod</a></li>
+            <br>
             <li><a href="#">Proč jet na Island</a></li>
+            <br>
             <li><a href="#">Co musíte vidět</a></li>
+            <br>
             <li><a href="#">Fotogalerie</a></li>
         </ul>
 
 
 
         <!-- sekce Úvod -->
-
+    <div class="obsah">
         <p>Island je jeden z nejpozoruhodnějších kousků pevniny, který v Evropě můžete navštívit. Neuchvátí jenom fotografy - krajináře, ale snad každého, kdo miluje divokou přírodu. Ne nadarmo se také říká, že si jej při první návštěvě zamilujete a budete se muset stále vracet. Byl to i můj případ!</p>
 
         <p>Rád bych popsal některá místa, která prostě při návštěvě nemůžete vynechat. Není ani důvod, jejich dostupnost je výborná díky hlavní okružní cestě, po které pohodlně celý ostrov za několik dní objedete bez toho, abyste museli zajíždět do hůře dostupného vnitrozemí. I tam je samozřejmě spousta dech beroucích míst, ale za pár dní se stihnout bohužel vše nedá.</p>
@@ -90,7 +93,7 @@
 		<p><strong>Skógafoss</strong> - Ať si koupíte jakoukoliv mapu nebo průvodce Islandu, jsem si téměř jist, že na titulce bude právě Skógafoss. Nutno říct, že právem. Výška 60 metrů, šířka 25 metrů, zážitek neuvěřitelný. Jakmile trochu zasvítí slunce, okamžitě se ve vodní tříšti v okolí vytváří krásná duha. Samozřejmě opět přitahuje spoustu turistů, takže doporučuji navštívit tuto hříčku přírody někdy pozdě večer či brzy ráno, kdy tu budete téměř sami, opravdu se to vyplatí.</p>
 
 		<p><strong>Dyrhólaey</strong> - Jde o nejjižnější cíp celého strova s vysokými útesy, na kterých ční jako tichý strážce velmi fotogenický maják. Zdejší útesy jsou také domovem Papuchalků (Fratercula arctica). Tito ptáci jsou opravdoví klauni a jejich nemotorný pohyb prostě musí vykouzlit úsměv na tváři každému. Mohutný lávový útes, ve kterém voda vyhloubila dvě skalní brány nebývalých rozměrů, prostě nesmíte vynechat.</p>
-
+    </div>
 
 
         <!-- sekce Fotogalerie -->
