--- a/index.html
+++ b/index.html
@@ -11,19 +11,23 @@
 
 
         <!-- hlavička -->
-        <div class="hlavicka">
+<div class="hlavicka">
+    <div class="zarovnani">
         <h1 class="titulek">Island</h1>
 
         <p class="perex">Když se řekne Island, spoustě lidem se jako první vybaví sníh a led. Sama jsem tam strávila téměř rok života a zem pokrytou sněhem a ledem jsem zažila jen jediný den. Jednou věcí si ale jistá jsem: že návštěva ostrova pod polárním kruhem je pro každého tak silným zážitkem, že se sem bude chtít vrátit.</p>
 
         <p class="autor">Jana Zcela Vymyšlená</p>
-        </div>
+    </div>
+</div>
 
 
 
 
         <!-- menu -->
-<div class="menuuvod">
+
+<div class="obsah"> 
+      <div class="menu-uvod">
         <ul class="menu">
             <li><a href="#">Úvod</a></li>
             <br>
@@ -35,8 +39,8 @@
         </ul>
 
 
-
         <!-- sekce Úvod -->
+
     <div class="uvod">
         <p>Island je jeden z nejpozoruhodnějších kousků pevniny, který v Evropě můžete navštívit. Neuchvátí jenom fotografy - krajináře, ale snad každého, kdo miluje divokou přírodu. Ne nadarmo se také říká, že si jej při první návštěvě zamilujete a budete se muset stále vracet. Byl to i můj případ!</p>
 
@@ -45,7 +49,6 @@
         <p>Když máte to štěstí a zrovna nesoptí některá z místních sopek, nabízí tento vulkanicky nejaktivnější ostrov Evropy úžasné pohledy, které prostě jinde nemáte šanci spatřit. Pro Středoevropana, suchozemce je to úplně jiný svět.</p>
     </div>
 </div>
-
         <img src="images/island1.jpg" alt="Island">
         <p class="popisek">
             Photo &copy; <a href="https://flic.kr/p/yFnyAT">Moyan Brenn</a>
@@ -53,7 +56,7 @@
 
 
         <!-- sekce Proč -->
-
+<div class="proc">
         <h2 class="nadpis">Proč jet na Island</h2>
 
         <p>Island je domovem největšího evropského ledovce, vodopádu s nejmohutnějším průtokem a tisíců místních koní a divokých hus, které majestátně ve dvojicích křižují nebe a dokreslují tak neopakovatelnou atmosféru tohoto pozoruhodného kousku pevniny kdesi v Atlantiku. K tomu mohutné skalní útvary, čnící z moře jako tiší strážci místních černých lávových pláží, stovky metrů vysoké útesy, které jsou domovem racků a papuchalků a především obrovské vodopády všeho druhu. Panují tu trochu jiná měřítka, a to téměř ve všem.</p>
@@ -61,7 +64,7 @@
         <p>Pociťujete tu zvláštní volnost. Mimo tří větších měst, kde je soustředěna drtivá většina obyvatel, můžete projíždět krajinou stovky kilometrů a čas od času potkáte jen osamělou usedlost, obklopenou stády koní a ovcí. Na jižním pobřeží když už narazíte na vesnici, jedná se o seskupení usedlostí, jejichž počet byste kolikrát spočítali na prstech jedné ruky a samozřejmě nesmí chybět benzínová pumpa. Právě čerpací stanice jsou zde centrem dění.</p>
 
         <p>Severní pobřeží je pak místy opravdová divočina, už tak mizivé osídlení ještě více prořídne a vy projíždíte místní fjordy po šotolinových cestách, aniž byste hodiny potkali jediné auto. Nad hlavou vám ční vysoké hory pokryté věčným sněhem, každým údolím se v kaskádách a vodopádech řítí dolů řeky, prostě divočina zamrznutá v čase. Dostane se vám to tu pod kůži a nutí Vás to přemýšlet, jak je ve skutečnosti člověk maličký a nicotný&hellip;</p>
-
+</div>
 
         <img src="images/island2.jpg" alt="Island">
         <p class="popisek">
@@ -70,7 +73,7 @@
 
 
         <!-- sekce Co musíte vidět -->
-
+<div class="comusitevidet">
         <h2 class="nadpis">Co musíte vidět</h2>
 
         <p><strong>Poloostrov Reykjanes</strong> - Než z letiště v Keflavíku zamíříte do hlavního města, zajeďte se podívat na tento poloostrov. Je to zajížďka jen pár kilometrů a rázem se dostanete do krajiny pro Island přímo typické. Cestu lemují lávová pole připomínající doslova měsíční krajinu. Pro Středoevropana něco neuvěřitelného. Ani kousek zeleně, kam oko dohlédne jen černá suť a rozpraskané lávové desky. Mezi tím vším až mysteriózně vypadající geotermální elektrárny. Na pobřeží pak vystupují z vody poutavé skalní útvary Reykjanesta.</p>
@@ -82,7 +85,7 @@
         <p><strong>Geysir</strong> - Kousek od Gullfossu je oblast, která turisty přitahuje jako magnet. Geysir, který dal název všem ostatním gejzírům světa. On sám se však již téměř odmlčel, údajně chrlí vodu jen velmi zřídka. Zato jeho menší a mladší soused, pojmenovaný Strokkur, prská do okolí vařící sloupec vody v méně či více pravidelných intervalech každých pár minut.</p>
 
         <p><strong>Seljalandsfoss</strong> - To už jsme na jižním pobřeží. Tento 60 metrů vysoký vodopád je výjimečný především tím, že se na něho můžete podívat nejen shora, ze stran, ale také jej obejít a hledět do okolní krajiny přes masy vody, které kolem Vás padají.</p>
-
+</div>
         <img src="images/island3.jpg" alt="Island">
         <p class="popisek">
             Photo &copy; <a href="https://flic.kr/p/LfcKHP">Yiannis Chatzitheodorou</a>
@@ -90,12 +93,12 @@
 
 
         <!-- změna strany, aby to celé bylo hezčí :) -->
-
+<div class="comusitevidet">
 		<p><strong>Skógafoss</strong> - Ať si koupíte jakoukoliv mapu nebo průvodce Islandu, jsem si téměř jist, že na titulce bude právě Skógafoss. Nutno říct, že právem. Výška 60 metrů, šířka 25 metrů, zážitek neuvěřitelný. Jakmile trochu zasvítí slunce, okamžitě se ve vodní tříšti v okolí vytváří krásná duha. Samozřejmě opět přitahuje spoustu turistů, takže doporučuji navštívit tuto hříčku přírody někdy pozdě večer či brzy ráno, kdy tu budete téměř sami, opravdu se to vyplatí.</p>
 
 		<p><strong>Dyrhólaey</strong> - Jde o nejjižnější cíp celého strova s vysokými útesy, na kterých ční jako tichý strážce velmi fotogenický maják. Zdejší útesy jsou také domovem Papuchalků (Fratercula arctica). Tito ptáci jsou opravdoví klauni a jejich nemotorný pohyb prostě musí vykouzlit úsměv na tváři každému. Mohutný lávový útes, ve kterém voda vyhloubila dvě skalní brány nebývalých rozměrů, prostě nesmíte vynechat.</p>
-    </div>
-
+   
+</div>
 
         <!-- sekce Fotogalerie -->
 
@@ -178,7 +181,6 @@
 		</div><!-- konec .galerie -->
 
 
-
         <!-- patička -->
     <div class="paticka">
         <p>
@@ -191,5 +193,6 @@
         </p>
 
     </div>
+</div>
     </body>
 </html>
