--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
 <div class="obsah"> 
       <div class="menu-uvod">
         <ul class="menu">
-            <li><a href="#">Úvod</a></li>
+            <li><a href="#uvod">Úvod</a></li>
             <br>
-            <li><a href="#">Proč jet na Island</a></li>
+            <li><a href="#proc">Proč jet na Island</a></li>
             <br>
-            <li><a href="#">Co musíte vidět</a></li>
+            <li><a href="#comusitevidet">Co musíte vidět</a></li>
             <br>
-            <li><a href="#">Fotogalerie</a></li>
+            <li><a href="#galerie">Fotogalerie</a></li>
         </ul>
 
 
         <!-- sekce Úvod -->
 
-    <div class="uvod">
+    <div class="uvod"><a name="uvod"></a>
         <p>Island je jeden z nejpozoruhodnějších kousků pevniny, který v Evropě můžete navštívit. Neuchvátí jenom fotografy - krajináře, ale snad každého, kdo miluje divokou přírodu. Ne nadarmo se také říká, že si jej při první návštěvě zamilujete a budete se muset stále vracet. Byl to i můj případ!</p>
 
         <p>Rád bych popsal některá místa, která prostě při návštěvě nemůžete vynechat. Není ani důvod, jejich dostupnost je výborná díky hlavní okružní cestě, po které pohodlně celý ostrov za několik dní objedete bez toho, abyste museli zajíždět do hůře dostupného vnitrozemí. I tam je samozřejmě spousta dech beroucích míst, ale za pár dní se stihnout bohužel vše nedá.</p>
@@ -56,9 +56,9 @@
 
 
         <!-- sekce Proč -->
-<div class="proc">
-        <h2 class="nadpis">Proč jet na Island</h2>
 
+        <h2 class="nadpis">Proč jet na Island<a name="proc"></a></h2>
+<div class="proc">
         <p>Island je domovem největšího evropského ledovce, vodopádu s nejmohutnějším průtokem a tisíců místních koní a divokých hus, které majestátně ve dvojicích křižují nebe a dokreslují tak neopakovatelnou atmosféru tohoto pozoruhodného kousku pevniny kdesi v Atlantiku. K tomu mohutné skalní útvary, čnící z moře jako tiší strážci místních černých lávových pláží, stovky metrů vysoké útesy, které jsou domovem racků a papuchalků a především obrovské vodopády všeho druhu. Panují tu trochu jiná měřítka, a to téměř ve všem.</p>
 
         <p>Pociťujete tu zvláštní volnost. Mimo tří větších měst, kde je soustředěna drtivá většina obyvatel, můžete projíždět krajinou stovky kilometrů a čas od času potkáte jen osamělou usedlost, obklopenou stády koní a ovcí. Na jižním pobřeží když už narazíte na vesnici, jedná se o seskupení usedlostí, jejichž počet byste kolikrát spočítali na prstech jedné ruky a samozřejmě nesmí chybět benzínová pumpa. Právě čerpací stanice jsou zde centrem dění.</p>
@@ -74,7 +74,7 @@
 
         <!-- sekce Co musíte vidět -->
 <div class="comusitevidet">
-        <h2 class="nadpis">Co musíte vidět</h2>
+        <h2 class="nadpis">Co musíte vidět<a name="comusitevidet"></a></h2>
 
         <p><strong>Poloostrov Reykjanes</strong> - Než z letiště v Keflavíku zamíříte do hlavního města, zajeďte se podívat na tento poloostrov. Je to zajížďka jen pár kilometrů a rázem se dostanete do krajiny pro Island přímo typické. Cestu lemují lávová pole připomínající doslova měsíční krajinu. Pro Středoevropana něco neuvěřitelného. Ani kousek zeleně, kam oko dohlédne jen černá suť a rozpraskané lávové desky. Mezi tím vším až mysteriózně vypadající geotermální elektrárny. Na pobřeží pak vystupují z vody poutavé skalní útvary Reykjanesta.</p>
 
@@ -102,7 +102,7 @@
 
         <!-- sekce Fotogalerie -->
 
-		<h2 class="nadpis">Fotogalerie</h2>
+	<h2 class="nadpis">Fotogalerie<a name="galerie"></a></h2>
 
         <div class="galerie">
 
